[package]
name = "enontekio"
version = "0.1.0"
edition = "2021"
description = "Utilities to solve problems with data extraction and manipulation, like Advent of Code puzzles."
license = "BSD-2-Clause"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
