[package]
name = "enontekio"
version = "0.1.2"
edition = "2021"
description = "Utilities to solve problems with data extraction and manipulation, like Advent of Code puzzles."
license = "BSD-2-Clause"
repository = "https://github.com/dereckson/enontekio/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
